[package]
name = "01-webgl-fundamentals-4"
version = "0.1.0"
authors = ["Noumir.Poutipou <noumir.poutipou@bulange.fr>"]
edition = "2018"

[dependencies]
stdweb = "0.4.17"
stdweb-derive = "0.5.1"
serde = "1.0.91"
serde_derive = "1.0.91"

[dependencies.rand]
version = "0.6.5"
default-features = false
features = ["stdweb"]

[build-dependencies]
webgl_generator = "0.2.0"
